<resources>
    <string name="app_name">AbringLibrary</string>

    <!-- common text for public class-->
    <string name="abring_share_with_title">اشتراک برنامه با:</string>
    <string name="abring_back_again_to_exit">برای خروج لطفا کلید بازگشت را دوباره بزنید!</string>
    <string name="abring_loading">در حال بارگزاری</string>

    <!--RetrofitErrorHelper -->
    <string name="abring_error">خطا</string>
    <string name="abring_SERVER_TIMEOUT">پاسخی از سرور دریافت نشد!</string>
    <string name="abring_SERVER_ERROR">خطایی در سرور رخ داده است</string>
    <string name="abring_NETWORK_ERROR">شبکه امکان برقراری ارتباط را ندارد!</string>
    <string name="abring_ERROR_AUTOROZATION">مجددا وارد حساب کاربری خود شوید!</string>
    <string name="abring_ERROR_PAGE_NOT_FOUND">صفحه موردنظر یافت نشد!</string>
    <string name="abring_no_connect_to_server">دسترسی به سرور امکان پذیر نمی باشد!</string>
    <string name="abring_no_connect_to_internet">دسترسی به اینترنت امکان پذیر نمی باشد!</string>
    <string name="abring_no_server_valid_response">پاسخ سرور نامفهوم می باشد!</string>
    <string name="abring_permission_content" formatted="false">این عملیات نیاز به دسترسی %1$s دارد. دسترسی می دهید؟</string>
    <string name="abring_accept_permission">اعمال دسترسی</string>
    <string name="abring_cancel2">الان نه</string>
    <string name="abring_permission">مجوزدهی</string>
    <string name="abring_mobile_register">ثبت نام با موبایل</string>
    <string name="abring_mobile_number">شماره موبایل</string>
    <string name="abring_username">نام کاربری</string>
    <string name="abring_password">کلمه عبور</string>
    <string name="abring_name">نام و نام خانوادگی</string>
    <string name="abring_active_code">کد فعال سازی</string>
    <string name="abring_cancel">انصراف</string>
    <string name="abring_accept">تایید</string>
    <string name="abring_register">ثبت نام</string>
    <string name="abring_email">ایمیل</string>
    <string name="abring_phone">تلفن</string>
    <string name="abring_send_accept_code">کد فعالسازی ارسال شد</string>
    <string name="abring_select_image">تصویر خود را انتخاب کنید:</string>
    <string name="abring_mobile_not_valid">شماره موبایل نامعتبر است!</string>
    <string name="abring_username_not_valid">نام کاربری نامعتبر است!</string>
    <string name="abring_password_not_valid">کلمه عبور نامعتبر است!</string>
    <string name="abring_name_not_valid">نام و نام خانوادگی نامعتبر است!</string>
    <string name="abring_active_code_not_valid">کد فعال سازی نامعتبر است!</string>
    <string name="abring_image_not_selected">تصویری انتخاب نشده است!</string>
    <string name="abring_image_selected_wrong">خطایی رخ داده است</string>
    <string name="abring_phone_not_valid">شماره تلفن نامعتبر است!</string>
    <string name="abring_email_not_valid">آدرس ایمیل نامعتبر است!</string>
    <string name="abring_successful_responce">اطلاعات با موفقیت ثبت شد</string>
    <string name="abring_failure_responce">متاسفانه خطایی رخ داده است</string>
    <string name="abring_resend_active_code">دریافت مجدد کد فعال سازی</string>
    <string name="abring_send_new_code">منتظر دریافت کد جدید باشید</string>
    <string name="abring_login">ورود</string>
    <string name="abring_login_successfull">ورود با موفقیت انجام شد</string>
    <string name="abring_guest_login">ورود میهمان</string>
    <string name="abring_READ_EXTERNAL_STORAGE_STRING">حافظه</string>
    <string name="abring_READ_PHONE_STATE_STRING">وضعیت دستگاه</string>
    <string name="abring_not_login">هنوز وارد حساب کاربری خود نشده اید!</string>
    <string name="abring_logout">خروج کاربری</string>
    <string name="abring_logout_question">برای خروج از حساب کاربری خود اطمینان دارید؟</string>
    <string name="abring_logout_all_question">برای خروج از تمام حساب های کاربری خود اطمینان دارید؟</string>
    <string name="abring_logout_successful">خروج کاربری با موفقیت انجام شد</string>
    <string name="abring_app_new_version">نسخه جدید برنامه آماده دانلود می باشد!</string>
    <string name="abring_new_version">نسخه جدید</string>
    <string name="abring_exit">خروج</string>
    <string name="abring_download_app">دریافت</string>
    <string name="abring_not_access_to_storage">مجوز دسترسی به حافظه وجود ندارد!</string>
    <string name="abring_retry_download">تلاش مجدد</string>
    <string name="abring_download_error">خطا در دانلود</string>
    <string name="abring_download_queued">در انتظار دانلود</string>
    <string name="abring_connecting">در حال اتصال</string>
    <string name="abring_downloading">در حال دانلود</string>
    <string name="abring_complete">دانلود با موفقیت</string>

</resources>
