<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layoutDirection="rtl">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="2dp">

        <LinearLayout
            android:id="@+id/linHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@color/primary_text"
                android:gravity="center"
                android:text="@string/abring_register"
                android:textColor="@color/primary_text_white"
                android:textSize="@dimen/text_size_Micro" />


            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true">

                    <Button
                        android:id="@+id/btnCancel"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="60dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:text="@string/abring_cancel"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/text_size_Micro" />

                    <Button
                        android:id="@+id/btnOK"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="60dp"
                        android:layout_height="40dp"
                        android:padding="0dp"
                        android:text="@string/abring_accept"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/text_size_Micro" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>