<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ir.abring.abringservices.ui.fragment.register.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/register_new_user" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:id="@+id/linRegisterHolder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/inputlayoutMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp">

                        <EditText
                            android:id="@+id/etMobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittext_underline"
                            android:gravity="center"
                            android:hint="شماره موبایل"
                            android:inputType="phone"
                            android:paddingBottom="5dp"
                            android:paddingTop="5dp"
                            android:textColor="@color/primary_text"
                            android:textSize="@dimen/text_size_Small">

                            <requestFocus />
                        </EditText>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/inputlayoutUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp">

                        <EditText
                            android:id="@+id/etUsername"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittext_underline"
                            android:gravity="center"
                            android:hint="نام کاربری"
                            android:inputType="text"
                            android:paddingBottom="5dp"
                            android:paddingTop="5dp"
                            android:textColor="@color/primary_text"
                            android:textSize="@dimen/text_size_Small" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/inputlayoutPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp">

                        <EditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittext_underline"
                            android:gravity="center"
                            android:hint="کلمه عبور"
                            android:inputType="text"
                            android:paddingBottom="5dp"
                            android:paddingTop="5dp"
                            android:textColor="@color/primary_text"
                            android:textSize="@dimen/text_size_Small" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/inputlayoutName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp">

                        <EditText
                            android:id="@+id/etName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittext_underline"
                            android:gravity="center"
                            android:hint="نام و نام خانوادگی"
                            android:inputType="text"
                            android:lines="1"
                            android:maxLength="40"
                            android:paddingBottom="5dp"
                            android:paddingTop="5dp"
                            android:textColor="@color/primary_text"
                            android:textSize="@dimen/text_size_Small" />

                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        android:id="@+id/imgAvatar"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/app_name"
                        android:src="@mipmap/img_abring_avatar" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linActiveHolder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/inputlayoutCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp">

                        <EditText
                            android:id="@+id/etCode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittext_underline"
                            android:gravity="center"
                            android:hint="کد فعال سازی"
                            android:inputType="number"
                            android:lines="1"
                            android:maxLength="10"
                            android:paddingBottom="5dp"
                            android:paddingTop="5dp"
                            android:textColor="@color/primary_text"
                            android:textSize="@dimen/text_size_Small" />

                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/tvResendActiveCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:gravity="center"
                        android:paddingTop="10dp"
                        android:text="@string/abring_resend_active_code"
                        android:textColor="@drawable/textview_selector"
                        android:textSize="@dimen/text_size_Small"
                        android:focusable="true" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/abring_register" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
